# neuroskate-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
EcomDominator_Standalone/: README.md  docker-compose.yml
EcomDominator_Standalone/src/ecom_dominator/: agent.py  api.py  dashboard.py  main.py  models.py  service.py
EcomDominator_Standalone/src/ecom_dominator/marketplaces/: amazon_client.py  base.py  facebook_client.py  shopify_client.py  tiktok_client.py
EcomDominator_Standalone/tests/: conftest.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  analyze.py  auth.py  leaderboard.py
app/cv/: __init__.py  analyzer.py  manager.py  physics.py  pose_detector.py  trick_classifier.py
ecom_dominator/: Dockerfile  docker-compose.yml  example_inventory.csv  pyproject.toml
ecom_dominator/src/ecom_dominator/: agent_runner.py
ecom_dominator/src/ecom_dominator/marketplaces/: ebay_client.py  etsy_client.py  tiktok_client.py  walmart_client.py
ecom_dominator/tests/: test_service.py
